[package]
name = "tangle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
test-case = "*"
criterion = "0.5.1"

[[bin]]
name = "tangle"
path = "src/bin.rs"

[[bench]]
name = "bench_lexer"
harness = false
